# BasicRust

./: .gitignore  01_complexity.md  LICENSE
Common/: concurrency.txt
Common/practice/1_safety/: 2_atomicity.txt  2_atomicity_and_data_race.txt  3_locking.txt  4_liviness.txt
Common/practice/2_safety/: 1_safety_what_is_it.txt
Common/practice/2_sharing/: 1_visibility.txt  2_publishing_and_escape.txt
DBSC/chp1/: Overview.txt
Hibernate/: MergeUpdate.txt
Spring/: proxy
algo/: 01_BinarySearch.md  01_complexity.md  read.md
book/hello/src/: main.rs
env/src/: main.rs
errors/src/: main.rs
expressions/src/: main.rs
idioms/borrow_arguments/: Cargo.toml
idioms/borrow_arguments/src/: main.rs
idioms/constructors/src/: main.rs
idioms/default_trait/src/: main.rs
idioms/drop_destuctors/: Cargo.toml
idioms/drop_destuctors/src/: main.rs
idioms/replace_owned_values/: Cargo.toml
language/derives/: Cargo.toml
language/derives/src/: main.rs
language/results/: Cargo.toml
linked_list/singly/: Cargo.toml
mandelbrot/: Cargo.toml
mvc/: docker-compose.yaml  user.http
mvc/custom_api/: Cargo.toml
mvc/custom_common/: Cargo.toml
mvc/custom_db/: Cargo.toml
mvc/custom_file/: Cargo.toml
mvc/custom_file_io/: Cargo.toml
mvc/custom_logger/: Cargo.toml
mvc/custom_main/: Cargo.toml
mvc/custom_rest/: Cargo.toml
mvc/custom_rest/src/: lib.rs  user.rs
mvc/custom_rest_endpoint/: Cargo.toml
mvc/custom_rest_endpoint/src/: main.rs  user.rs
mvc/custom_rest_endpoint/tests/: user_tests.rs
mvc/custom_rest_endpoints/: Cargo.toml
mvc/custom_service/: Cargo.toml
mvc/custom_service/src/: lib.rs
others/web_server/: Cargo.toml
ownership/src/: main.rs
references/src/: main.rs
types/src/: main.rs
(+28 files in other folders)
